<resources>
    <string name="app_name">Bashkirov_v_20</string>
    <string name="galerry">Галерея</string>
    <string name="ggggd">.</string>
    <string name="nghngf">TODO</string>
    <string name="gfdgdf">Введите пароль</string>
    <string name="btn9">9</string>
    <string name="btn2">2</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn0">0</string>
    <string name="btn34">3</string>
    <string name="btn1">1</string>
    <string name="hfdhfdhdf">TODO</string>
    <string name="bfd">TODO</string>
    <string name="hgffdg">TODO</string>
    <string name="photos">Фотографии</string>
    <string name="fds">Сегодня</string>
    <string name="hfsdhd">TODO</string>
    <string name="jhgjghjgh">TODO</string>
    <string name="jhgjghj">TODO</string>
    <string name="gfdgfd">Вчера</string>
    <string name="jhgjgkjghj">TODO</string>
    <string name="khgkgkgh">TODO</string>
    <string name="hhghf">Позавчера</string>
    <string name="jfgjgfj">TODO</string>
</resources>